--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
-DATABASE_URL = mongodb://0.0.0.0:27017/
+DATABASE_URL = mongodb+srv://prakharsri45:Helloworld123@shortify.pqav4.mongodb.net/
 JWT_SECRET='THEGREATSECRET'
 PORT=3000
+VITE_BACKEND_URL=http://localhost:3000
